--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,35 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#222939"
+    android:background="#161521"
+    android:backgroundTint="#161521"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#4E3D3D"
+        android:fontFamily="monospace"
         android:text="UddannelsesNav"
-        android:textColor="#000000"
+        android:textColor="#FFFEFE"
         android:textColorHint="#000000"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.122" />
+        app:layout_constraintVertical_bias="0.088" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="315dp"
-        android:layout_height="75dp"
+        android:layout_width="314dp"
+        android:layout_height="116dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="404dp"
         android:layout_marginEnd="10dp"
+        android:background="@drawable/radius"
+        android:backgroundTint="#004645"
+        android:fontFamily="monospace"
+        android:padding="20dp"
         android:text="Velkommen til UddannelsesNav, som er designet til at hjælpe dig med at finde den perfekte ungdomsuddannelse!"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -40,33 +48,24 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#000000"
+        android:layout_marginBottom="36dp"
+        android:backgroundTint="#004645"
         android:onClick="clickedButton"
         android:text="prøv"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="290dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="72dp"
-        android:text="Prøv vores test for at opdage dine muligheder og interesser, og få anbefalinger på uddannelser, der passer bedst til  dig"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="296dp"
-        android:layout_height="260dp"
+        android:id="@+id/imageView2"
+        android:layout_width="543dp"
+        android:layout_height="385dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/_36530381_1026635541633084_5001048174927609521_n"
-        tools:layout_editor_absoluteY="386dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.305"
+        app:srcCompat="@drawable/baggrund" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
