--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,6 @@
         android:layout_marginTop="404dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/radius"
-        android:backgroundTint="#004645"
         android:fontFamily="monospace"
         android:padding="20dp"
         android:text="Velkommen til UddannelsesNav, som er designet til at hjælpe dig med at finde den perfekte ungdomsuddannelse!"
@@ -46,15 +45,17 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="317dp"
+        android:layout_height="46dp"
         android:layout_marginBottom="36dp"
         android:backgroundTint="#004645"
         android:onClick="clickedButton"
         android:text="prøv"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
+
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
