--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -5,7 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InterestsActivity">
-
+    <Button
+        android:id="@+id/backToMenuBtn"
+        android:onClick="backToMenu"
+        android:layout_width="73dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="11dp"
+        android:text="Tilbage"
+        android:textColor="@color/black"
+        android:textSize="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -86,6 +96,7 @@
                 android:layout_weight="1"
                 android:background="#10B516"
                 android:text="Kunst" />
+
 
 
         </LinearLayout>
