--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -64,6 +64,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/backToMainBtn"
+            android:onClick="backToMain"
+            android:layout_width="73dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="11dp"
+            android:text="Tilbage"
+            android:textColor="@color/black"
+            android:textSize="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
