--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:background="@drawable/radius"
         android:fontFamily="monospace"
         android:padding="20dp"
+        android:alpha="0.7"
         android:text="Velkommen til UddannelsesNav, som er designet til at hjælpe dig med at finde den perfekte ungdomsuddannelse!"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -45,16 +46,17 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="317dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="36dp"
+        android:layout_width="121dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="40dp"
+        android:alpha="0.8"
         android:backgroundTint="#004645"
+        android:fontFamily="monospace"
         android:onClick="clickedButton"
         android:text="prøv"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
