--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,77 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuActivity">
+    tools:context=".MenuActivity"
+    android:background="#11171E">
+
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="UddannelsesNav"
+        android:id="@+id/textView6"
+        android:layout_width="243dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/black"
+        android:backgroundTint="#10B516"
+        android:elevation="50dp"
+        android:gravity="center"
+        android:onClick="educationInfo"
+        android:text="Uddannelser"
         android:textColor="@color/black"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="673dp"
-        android:layout_marginTop="32dp"
-        android:orientation="vertical"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4">
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.306" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
+    <Button
+        android:id="@+id/backToMainBtn"
+        android:layout_width="73dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="636dp"
+        android:onClick="backToMain"
+        android:text="Tilbage"
+        android:textColor="@color/black"
+        android:textSize="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="227dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="64dp"
+        android:background="#10B516"
+        android:backgroundTint="#10B516"
+        android:clickable="true"
+        android:elevation="100dp"
+        android:gravity="center"
+        android:onClick="InterestInfo"
+        android:text="Interesser"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-            android:layout_marginBottom="10dp"
-            android:background="@color/black"
-            android:backgroundTint="#10B516"
-            android:gravity="center"
-            android:onClick="educationInfo"
-            android:text="Uddannelser"
-            android:textColor="@color/black"
-            android:textSize="25dp" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="483dp"
+        android:layout_height="356dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baggrund2" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="#10B516"
-
-            android:backgroundTint="#10B516"
-            android:clickable="true"
-            android:gravity="center"
-            android:onClick="InterestInfo"
-
-
-            android:text="Interesser"
-            android:textColor="@color/black"
-            android:textSize="25dp" />
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/backToMainBtn"
-            android:onClick="backToMain"
-            android:layout_width="73dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="11dp"
-            android:text="Tilbage"
-            android:textColor="@color/black"
-            android:textSize="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
