--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,12 +30,14 @@
         android:layout_width="314dp"
         android:layout_height="116dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="404dp"
+        android:layout_marginTop="384dp"
         android:layout_marginEnd="10dp"
+        android:alpha="0.7"
         android:background="@drawable/radius"
+        android:backgroundTint="#004645
+"
         android:fontFamily="monospace"
         android:padding="20dp"
-        android:alpha="0.7"
         android:text="Velkommen til UddannelsesNav, som er designet til at hjælpe dig med at finde den perfekte ungdomsuddannelse!"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -48,12 +50,12 @@
         android:id="@+id/button"
         android:layout_width="121dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="52dp"
         android:alpha="0.8"
         android:backgroundTint="#004645"
         android:fontFamily="monospace"
         android:onClick="clickedButton"
-        android:text="prøv"
+        android:text="Udforsk"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +69,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.305"
+        app:layout_constraintVertical_bias="0.277"
         app:srcCompat="@drawable/baggrund" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
