--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,64 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuActivity"
-    android:background="#11171E">
+    android:background="#11171E"
+    tools:context=".MenuActivity">
 
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="243dp"
-        android:layout_height="65dp"
+        android:layout_width="203dp"
+
+        android:layout_height="59dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/black"
-        android:backgroundTint="#10B516"
+        android:background="@drawable/radius_menu"
+        android:backgroundTint="#4A2C18"
         android:elevation="50dp"
+        android:fontFamily="monospace"
         android:gravity="center"
         android:onClick="educationInfo"
         android:text="Uddannelser"
-        android:textColor="@color/black"
+
+        android:textColor="@color/white"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.306" />
+        app:layout_constraintVertical_bias="0.276" />
 
     <Button
         android:id="@+id/backToMainBtn"
         android:layout_width="73dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="636dp"
+        android:layout_marginStart="8dp"
         android:onClick="backToMain"
         android:text="Tilbage"
         android:textColor="@color/black"
         android:textSize="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="227dp"
-        android:layout_height="66dp"
-        android:layout_marginTop="64dp"
-        android:background="#10B516"
-        android:backgroundTint="#10B516"
+        android:layout_width="198dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="116dp"
+        android:background="@drawable/radius_menu"
+        android:backgroundTint="#4A2C18"
         android:clickable="true"
         android:elevation="100dp"
+        android:fontFamily="monospace"
         android:gravity="center"
         android:onClick="InterestInfo"
         android:text="Interesser"
-        android:textColor="@color/black"
+
+        android:textColor="@color/white"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="483dp"
-        android:layout_height="356dp"
+        android:layout_width="452dp"
+        android:layout_height="346dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
