--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -11,7 +11,6 @@
     <TextView
         android:id="@+id/textView6"
         android:layout_width="203dp"
-
         android:layout_height="59dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/radius_menu"
@@ -23,23 +22,26 @@
         android:text="Uddannelser"
 
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.276" />
+        app:layout_constraintVertical_bias="0.242" />
 
     <Button
         android:id="@+id/backToMainBtn"
-        android:layout_width="73dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_width="88dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="4dp"
+        android:backgroundTint="#11171E"
         android:onClick="backToMain"
         android:text="Tilbage"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="8dp"
+        app:iconTint="#6C3737"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -47,7 +49,7 @@
         android:id="@+id/textView7"
         android:layout_width="198dp"
         android:layout_height="60dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/radius_menu"
         android:backgroundTint="#4A2C18"
         android:clickable="true"
@@ -55,24 +57,40 @@
         android:fontFamily="monospace"
         android:gravity="center"
         android:onClick="InterestInfo"
-        android:text="Interesser"
 
+        android:text="Studieretninger"
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="452dp"
-        android:layout_height="346dp"
+        android:layout_width="634dp"
+        android:layout_height="365dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baggrund2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="383dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="12dp"
+
+        android:layout_marginTop="5dp"
+        android:fontFamily="monospace"
+        android:text="Hvad vil du blive klogere på?"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="27sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
