--- a/app/src/main/res/layout/activity_kunst.xml
+++ b/app/src/main/res/layout/activity_kunst.xml
@@ -7,4 +7,60 @@
     android:layout_height="match_parent"
     tools:context=".KunstActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent">
+
+    <!-- Store beskrivelse TextView -->
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Titel"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <!-- Lille TextView 1 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+      <TextView
+          android:id="@+id/textView1"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="Tekst 1"
+          android:textSize="16sp" />
+
+      <TextView
+          android:id="@+id/textView2"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="Tekst 2"
+          android:textSize="16sp" />
+
+      <TextView
+          android:id="@+id/textView3"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="Tekst 3"
+          android:textSize="16sp" />
+    </LinearLayout>
+
+    <!-- Lille TextView 2 -->
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tekst 4"
+        android:textSize="16sp" />
+  </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
