--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -28,7 +28,7 @@
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.242" />
+        app:layout_constraintVertical_bias="0.368" />
 
     <Button
         android:id="@+id/backToMainBtn"
@@ -43,13 +43,14 @@
         android:textSize="8dp"
         app:iconTint="#6C3737"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="#11171E" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="198dp"
         android:layout_height="60dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/radius_menu"
         android:backgroundTint="#4A2C18"
         android:clickable="true"
@@ -68,11 +69,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="634dp"
-        android:layout_height="365dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="675dp"
+        android:layout_height="376dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baggrund2" />
@@ -83,7 +84,7 @@
         android:layout_height="83dp"
         android:layout_marginStart="12dp"
 
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="36dp"
         android:fontFamily="monospace"
         android:text="Hvad vil du blive klogere på?"
         android:textAlignment="center"
