menuside størrelse på knapper

--- a/app/src/main/res/layout/activity_kunst.xml
+++ b/app/src/main/res/layout/activity_kunst.xml
@@ -56,11 +56,15 @@
     </LinearLayout>
 
     <!-- Lille TextView 2 -->
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tekst 4"
-        android:textSize="16sp" />
   </LinearLayout>
+
+  <TextView
+      android:id="@+id/textView4"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Tekst 4"
+      android:textSize="16sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      tools:layout_editor_absoluteY="49dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
