--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,8 +10,8 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="203dp"
-        android:layout_height="59dp"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/radius_menu"
         android:backgroundTint="#4A2C18"
@@ -25,9 +25,10 @@
         android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.216" />
+        app:layout_constraintVertical_bias="0.26" />
 
     <Button
         android:id="@+id/backToMainBtn"
@@ -47,9 +48,9 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="198dp"
+        android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/radius_menu"
         android:backgroundTint="#4A2C18"
         android:clickable="true"
