--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_education">
+    tools:context=".InterestsActivity">
     <Button
         android:id="@+id/backToMenuBtn"
         android:onClick="backToMenu"
@@ -17,18 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="UddannelsesNav"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:layout_width="405dp"
         android:layout_height="480dp"
@@ -37,7 +25,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+
         app:layout_constraintVertical_bias="0.318"
         tools:ignore="MissingConstraints">
 
@@ -51,21 +39,21 @@
                 android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginRight="35dp"
                 android:layout_weight="1"
-                android:background="#10B516"
-                android:text="TextView" />
+                android:background="@drawable/color"
+                android:onClick="toNaturvidenskab" />
 
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="55dp"
                 android:layout_weight="1"
-                android:background="#10B516"
-                android:text="TextView" />
+                android:background="@drawable/color"
+                android:onClick="toSamfundsvidenskab" />
 
 
         </LinearLayout>
@@ -79,25 +67,27 @@
                 android:id="@+id/textView20"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginRight="35dp"
                 android:layout_weight="1"
-                android:background="#10B516"
-                android:text="TextView" />
+                android:onClick="toSprog"
+                android:background="@drawable/color" />
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:onClick="toKunst"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="55dp"
                 android:layout_weight="1"
-                android:background="#10B516"
-                android:text="TextView" />
+                android:background="@drawable/color" />
+
 
 
         </LinearLayout>
 
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
