--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,9 +33,7 @@
         android:layout_marginTop="372dp"
         android:layout_marginEnd="10dp"
         android:alpha="0.7"
-        android:background="@drawable/radius"
-        android:backgroundTint="#004645
-"
+        android:background="@drawable/color"
         android:fontFamily="monospace"
         android:padding="20dp"
         android:text="Velkommen til UddannelsesNav, som er designet til at hjælpe dig med at finde den perfekte ungdomsuddannelse!"
