--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -5,17 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InterestsActivity">
-    <Button
-        android:id="@+id/backToMenuBtn"
-        android:onClick="backToMenu"
-        android:layout_width="73dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="11dp"
-        android:text="Tilbage"
-        android:textColor="@color/black"
-        android:textSize="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="405dp"
@@ -32,7 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="179dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:textAlignment="center">
 
 
             <TextView
@@ -43,7 +33,14 @@
                 android:layout_marginRight="35dp"
                 android:layout_weight="1"
                 android:background="@drawable/color"
-                android:onClick="toNaturvidenskab" />
+                android:fontFamily="monospace"
+                android:onClick="toNaturvidenskab"
+                android:text="HF"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:padding="37dp"/>
 
             <TextView
                 android:id="@+id/textView19"
@@ -53,15 +50,23 @@
                 android:layout_marginRight="55dp"
                 android:layout_weight="1"
                 android:background="@drawable/color"
-                android:onClick="toSamfundsvidenskab" />
+                android:fontFamily="monospace"
+                android:onClick="toSamfundsvidenskab"
+                android:text="STX"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:padding="37dp"/>
 
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="200dp"
+            android:orientation="horizontal"
+            android:textAlignment="center">
 
             <TextView
                 android:id="@+id/textView20"
@@ -70,24 +75,68 @@
                 android:layout_marginLeft="55dp"
                 android:layout_marginRight="35dp"
                 android:layout_weight="1"
+                android:background="@drawable/color"
+                android:fontFamily="monospace"
                 android:onClick="toSprog"
-                android:background="@drawable/color" />
+                android:padding="37dp"
+                android:text="HTX"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:onClick="toKunst"
                 android:layout_marginLeft="35dp"
                 android:layout_marginRight="55dp"
                 android:layout_weight="1"
-                android:background="@drawable/color" />
-
+                android:background="@drawable/color"
+                android:fontFamily="monospace"
+                android:onClick="toKunst"
+                android:padding="37dp"
+                android:text="HHX"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
 
 
     </LinearLayout>
+    <Button
+        android:id="@+id/backToMainBtn"
+        android:layout_width="88dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="4dp"
+        android:backgroundTint="#11171E"
+        android:onClick="backToMenu"
+        android:text="Tilbage"
+        android:textColor="@color/white"
+        android:textSize="8dp"
+        app:iconTint="#6C3737"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="#11171E" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:fontFamily="monospace"
+        android:text="Læs mere om forskellige ungdomsuddannelser"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
