--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -13,13 +13,12 @@
     <LinearLayout
         android:layout_width="405dp"
         android:layout_height="480dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginBottom="48dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintVertical_bias="0.318"
+        app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
@@ -68,7 +67,6 @@
                 android:id="@+id/textView21"
                 android:layout_width="258dp"
                 android:layout_height="141dp"
-
                 android:layout_marginRight="40dp"
                 android:layout_weight="1"
                 android:onClick="toSamfundsvidenskab"
@@ -93,5 +91,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:rippleColor="#11171E" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="345dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="monospace"
+        android:text="Læs mere om de forskellige studieretninger på STX"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
