--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -14,11 +14,12 @@
         android:layout_width="407dp"
         android:layout_height="324dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="203dp">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,8 +111,8 @@
         android:id="@+id/imageView14"
         android:layout_width="169dp"
         android:layout_height="207dp"
-        app:srcCompat="@drawable/blomst"
-        tools:layout_editor_absoluteX="240dp"
-        tools:layout_editor_absoluteY="531dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/blomst" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
