--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,8 +13,7 @@
         android:layout_width="190dp"
         android:layout_height="60dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/radius_menu"
-        android:backgroundTint="#4A2C18"
+        android:background="@drawable/menugradient"
         android:elevation="50dp"
         android:fontFamily="monospace"
         android:gravity="center"
@@ -51,8 +50,7 @@
         android:layout_width="190dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/radius_menu"
-        android:backgroundTint="#4A2C18"
+        android:background="@drawable/menugradient"
         android:clickable="true"
         android:elevation="100dp"
         android:fontFamily="monospace"
